<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 电视 -->
    <string name="tv_title_text">电视</string>
    <string name="tv_search_hint">搜索频道和回看节目</string>
    <string name="radio_title_text">我的电台</string>
    <!-- 播放器 -->
    <string name="version">V1.1.12814</string>
    <string name="app_name">米花TV</string>
    <string name="login">登录</string>
    <string name="help">帮助</string>
    <string name="more">加载更多</string>
    <string name="choosepic_item1">米花相册</string>
    <string name="choosepic_item3">更多</string>
    <string name="share_sina_title">新浪微博授权</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="Certain">确定</string>
    <string name="BTSetting">配置蓝牙连接</string>
    <string name="comment_tips">说点什么...</string>
    <string name="main_wait_net">加载中...</string>
    <!-- DLNA -->
    <string name="position">00:00:00</string>
    <!-- jianghao new start -->
    <string name="mainpage_header_left_text">movie</string>
    <string name="ct_programlist_programlist_advance">ct_programlist_programlist_advance</string>
    <string name="ct_programlist_programlist_back">ct_programlist_programlist_back</string>
    <string name="ct_programlist_gridview_item_img">ct_programlist_gridview_item_img</string>
    <string name="ct_comment_list_item_img">ct_comment_list_item_img</string>
    <string name="ct_programdetails_img">ct_programdetails_img</string>
    <string name="ct_tvguide_btn_monday">一</string>
    <string name="ct_tvguide_btn_tuesday">二</string>
    <string name="ct_tvguide_btn_wednesday">三</string>
    <string name="ct_tvguide_btn_thursday">四</string>
    <string name="ct_tvguide_btn_friday">五</string>
    <string name="ct_tvguide_btn_satursday">六</string>
    <string name="ct_tvguide_btn_sunday">天</string>
    <string name="ct_tvguide_channle_list_item_img">ct_tvguide_channle_list_item_img</string>
    <string name="ct_loading_img">ct_loading_img</string>
    <string name="ct_splash_grid_item_img">ct_splash_grid_item_img</string>
    <string name="ct_communication">ct_communication</string>
    <string name="ct_video_list_item_img">ct_video_list_item_img</string>
    <string name="ct_video_imgbutton">icon</string>
    <string name="ct_video_left_text">点播</string>
    <string name="ct_video_popwindow_film">电影</string>
    <string name="ct_video_popwindow_opera">戏剧</string>
    <string name="ct_video_popwindow_art">综艺</string>
    <string name="ct_video_popwindow_music">音乐</string>
    <string name="ct_video_popwindow_carton">动漫</string>
    <string name="ct_programdetails_head_text">视频详情</string>
    <string name="ct_programdetails_programname">节目名字</string>
    <string name="ct_programdetail_comment_watchers">238人正在看</string>
    <string name="ct_programdetail_comment_lovers">56人喜欢</string>
    <string name="ct_tv_imgbutton">icon</string>
    <string name="ct_tv_list_item_img">ct_tv_list_item_img</string>
    <string name="ct_tv_pagetype">类型</string>
    <string name="ct_tv_channeldetail_left_text">cctv1</string>
    <string name="ct_search_hint">搜索文字</string>
    <string name="ct_searchresult_back">back</string>
    <string name="ct_seacrhresult_item_img">ct_seacrhresult_item_img</string>
    <string name="ct_collection_text">收藏</string>
    <string name="ct_search_result_text">搜索结果</string>
    <string name="ct_playhistory_text">播放历史</string>
    <string name="ct_mobiletotv_starttime">00:00:00</string>
    <string name="ct_mobiletotv_endtime">00:00:00</string>
    <string name="ct_usercenter_text">用户中心</string>
    <string name="ct_usercenter_weibo">新浪微博</string>
    <string name="ct_usercenter_jidinghe">机顶盒ID</string>
    <string name="validcode">(请在电视上输入，完成绑定)\n验证码:</string>
    <string name="connected">未连接</string>
    <string name="ct_video_recommand">米花推荐</string>
    <string name="ct_video_total">全部</string>
    <string name="programintro">剧情介绍</string>
    <string name="ct_video_no_program_text">暂无节目</string>
    <!-- jianghao new  end -->
    <string name="attention">注意</string>
    <string name="delete_all">是否要删除这条微博？</string>
    <string name="send">发送</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="del_pic">是否删除图片？</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="button_ok">确定</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="msg_bulk_mode_scanned">散装模式：条码扫描，并保存</string>
    <string name="msg_camera_framework_bug">很抱歉，机器人相机出现问题。您可能需要重新启动设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_status">请调整拍摄让二维码充满取景框</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_unmount_usb">对不起，SD卡是不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存许多条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">使用％s作为产品ID占位</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">解码一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">数据矩阵码解码</string>
    <string name="preferences_decode_QR_title">解码QR条码</string>
    <string name="preferences_front_light_summary">使前灯如果可用</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">当扫描条形码</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="share_name">通过条码分享</string>
    <string name="wa_name">网络配置</string>
    <string name="loding_tips">程序初始化中...</string>
    <string name="sync_sinaweibo">同步到新浪微博</string>
    <string name="sh_mp">首页</string>
    <string name="sh_movie">点播</string>
    <string name="sh_tv">电视</string>
    <string name="sh_more">更多</string>
    <string name="comment">评论</string>
    <string name="huanyingtichunidebaoguiyijian">您的每一个建议，我们都会视如珍宝，无论用的开心还是不爽都来吐槽吧
另可加微信公共账户：米花tv 一起交流，遇到问题怎么办？请直接用微信添加查找公共账户“米花TV为好友，语音微我，给您第一时间语音答疑</string>
    <string name="feedback">意见反馈</string>
    <string name="aboutus">关于我们</string>
    <string name="xiaojiayingyuancom">www.mihua.tv</string>
    <string name="visitofficalwebsite">访问官方网站</string>
    <string name="check_version">检测新版本</string>
    <string name="bindshare">绑定分享</string>
    <string name="sharetofriends">分享应用给好友</string>
    <string name="setting">设置</string>
    <string name="tvboxname">机顶盒名称</string>
    <string name="send_comment_tips">说说你的看法</string>
    <string name="sina">新浪微博</string>
    <string name="bindcancel">解除绑定</string>
    <string name="confirm">确定</string>
    <string name="upload_headpic">上传头像：</string>
    <string name="share_sina">分享到新浪微博</string>
    <string name="share_weixin">分享给微信好友</string>
    <string name="share_contact">分享给通讯录好友</string>
    <string name="ct_app_title">应用</string>
    <string name="loading">加载中……</string>
    <string name="itv_head_skip">跳过</string>
    <string name="itv_head_next_step">下一步</string>
    <string name="itv_head_open_wifi">点击开启WIFI</string>
    <string name="itv_head_splash_twocode">扫二维码连接IPTV机顶盒</string>
    <string name="itv_head_prompt3">恭喜，完成机顶盒绑定</string>
    <string name="itv_head_help_over">进入iTV</string>
    <string name="itv_head_main_text1">CLEAR</string>
    <string name="itv_head_main_text2">Sunday</string>
    <string name="itv_head_main_text3">20</string>
    <string name="itv_head_main_text3_plus">C</string>
    <string name="itv_head_main_movie">点播</string>
    <string name="itv_head_main_tv">电视</string>
    <string name="itv_head_main_app">应用</string>
    <string name="itv_head_boxname">我的盒子</string>
    <string name="itv_head_boxname_default">我的盒子</string>
    <string name="itv_head_unbindbox">解除绑定</string>
    <string name="tv_now_string">直播</string>
    <string name="tv_nowday_string">今天</string>
    <string name="video_all_tips">下拉选择热门标签</string>
    <string name="ct_photo_title_name">米花相册</string>
    <string name="custom_dialog_title">米花TV温馨提示</string>
    <string name="custom_dialog_title_buy">订购</string>
    <string name="comment_no_comment">暂无评论</string>
    <string name="loadinfo">载入中，请稍候。。。</string>
    <string name="file_delete_confirm">确定删除 (%s) ？</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">抱歉，此视频无法播放</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="stb_name_edit_tips">机顶盒名称</string>
    <string name="photo_dont_has_pic">相册中无图片，快去拍照吧！</string>
    <string name="tvlist_search">输入数字，切换您喜欢的频道</string>
    <string name="mihuazhongguodianxin">米花@中国电信</string>
    <string name="coorperate">官方合作媒体：</string>
    <string name="copyright">Copyright© 2012 All rights reserved</string>
    <string name="input_qrcode_tips">手动输入屏幕上的编号</string>
    <string name="feedback_two">米花客服</string>
    <string name="fb_send_btn">发表</string>
    <string name="fb_hint">欢迎拍砖或提问题</string>
    <string name="loading_more">加载更多</string>
    <string name="err_tip">加载失败,点此重试 </string>
    <string name="feedback_tip">亲爱的米花儿，您的每一条建议，我们都会视为珍宝，使用过程中有疑问或更好的建议请随时告诉我们，我们会尽快与您在这里沟通交流。另外可加微信公众账号：米花TV，或者加QQ群：179675771，一起交流</string>
    <string name="init_decoders">加载中，请稍候...</string>
    <string name="ct_tv_station_title">电视台</string>
    
    <string name="channel">频道</string>
    <string name="lover">喜欢</string>
    <string name="focus">看点</string>

</resources>