<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/stantard_title_height"
        android:layout_alignParentTop="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/radio_title_text" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_below="@+id/title"
        android:background="#846311"
        android:gravity="center_vertical|left" >

        <ImageView
            android:id="@+id/anima_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/anim_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btns"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_below="@+id/title" >

        <TextView
            android:id="@id/channel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/channel" />

        <TextView
            android:id="@+id/favorite"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/lover" />

        <TextView
            android:id="@+id/point"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/focus" />
    </LinearLayout>

</RelativeLayout>