<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/head_main_background" >

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/ct_loading_img"
        android:contentDescription="@string/ct_loading_img" />

    <ProgressBar
        android:id="@+id/progressBar_loading"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="120dp" />

    <TextView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ct_loading_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="90dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/ct_loading_img"
        android:text="@string/loding_tips"
        android:textColor="@color/c_white" />

    <ImageView
        android:id="@+id/a_pr_anim_wait_all_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/transparent"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="#a1000000"
        android:visibility="gone" />
    <!-- 提示框 -->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/a_pct_custom_dialog_all"
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/alertview_bg"
        android:orientation="vertical"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/a_pcustom_dialog_title"
            android:layout_width="fill_parent"
            android:layout_height="50dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/d_null"
                android:contentDescription="@string/app_name"
                android:src="@drawable/alertview_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/custom_dialog_title"
                android:textColor="@color/c_white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/d_null"
                android:contentDescription="@string/app_name"
                android:src="@drawable/alertview_line" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/about_scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/a_pcustom_dialog_title"
            android:layout_margin="20dp" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/a_pcustom_dialog_txt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/c_white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/utips_progress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/a_pcustom_dialog_txt"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp" />

                <TextView
                    android:id="@+id/utips_txt_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/utips_progress"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="15dp"
                    android:textColor="@color/c_yellow"
                    android:textSize="15dp" />
            </RelativeLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp" >

            <Button
                android:id="@+id/a_pcustom_dialog_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/alertview_button_blue"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/Certain"
                android:textColor="#ffa826"
                android:textSize="18dp" />

            <Button
                android:id="@+id/a_pcustom_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/alertview_button_grey"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/cancel"
                android:textColor="#999999"
                android:textSize="18dp" />
        </LinearLayout>
    </RelativeLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/corners" />

</FrameLayout>